<resources>
    <string name="app_name">Delivery Wilson</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="loggin">LOGIN</string>
    <string name="user_loggin">USER LOGIN</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="phone">Telefono</string>
    <string name="correo">Correo</string>


</resources>