<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Form"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

          <com.google.android.material.textview.MaterialTextView
              style="@style/input"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/text_height"
              android:id="@+id/user"
              android:textColor="@color/black"
              android:paddingLeft="15dp"
              android:drawablePadding="@dimen/text_height"
              android:drawableStart="@drawable/user_circle"
              />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"

                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/drawable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:drawableStart="@drawable/person"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/apellido"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    style="@style/drawable"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/person"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:drawableStart="@drawable/phone"
                    style="@style/drawable"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/correo"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/email"
                    style="@style/drawable"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </com.google.android.material.button.MaterialButton>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>